--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -6,7 +6,7 @@
     <head lang="en">
         <meta charset="UTF-8" />
         <title>
-            Rango
+            Rango -
             {% block title_block %}
                 How to Tango with Django!
             {% endblock %}
